# rust-qa-cli

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
rust-qa-cli/: Cargo.toml
rust-qa-cli/src/: lib.rs  main.rs
rust-translator/: Cargo.toml  Makefile
rust-translator/src/: main.rs
