[package]
name = "rust-qa-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
rust-bert = { version = "0.21.0", features = ["download-libtorch"] }
wikipedia = "0.3.4"